PP-12365 add auth resource integration tests for retrieval